# fx-auto-trading

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: predict.yml
docs/archive/: initial_plan.md  research-001-zenn-ml-short-trading.md  research-002-optimax-ai-trading.md  research-003-sigfin-cointegration-pairs-trading.md  research-004-ffaj-fx-performance-factors.md  research-005-mufg-ai-fx-prediction.md  research-survey.md
docs/design/: GUIDE.md  TEMPLATE.md
docs/design/decisions/: 001-technology-stack.md  002-prediction-model-design.md  003-risk-management.md  004-overfitting-prevention.md  005-data-pipeline.md  006-feature-engineering.md  007-production-model.md
docs/plans/: 002-forward-test.md  004-real-trading-roadmap.md  GUIDE.md  TEMPLATE.md
docs/plans/resolved/: 001-prediction-model.md  003-model-improvement.md
docs/review/: FORMAT.md  GUIDE.md  TEMPLATE.md
docs/status/: GUIDE.md  current-state.md  implementation.md  roadmap.md
models/: production_meta.json  production_meta_v2.json  production_model.pkl  production_model_v2.pkl
results/: evaluation_summary.md  forward_test_week1.md  simulated_forward.csv  simulated_forward_report.md  v2_evaluation_summary.md
scripts/: collect_data.py  download_histdata.py  forward_report.py  predict.py  train_production.py
src/fx_auto_trading/: __init__.py  __main__.py  config.py  exceptions.py  log.py  pipeline.py
src/fx_auto_trading/data/: collector.py  storage.py
src/fx_auto_trading/models/: baseline.py  (+1 more)
tests/test_data/: test_storage.py
tests/test_features/: test_pipeline.py
(+10 files in other folders)
