[project]
name = "fx-auto-trading"
version = "0.1.0"
description = "USD/JPY day-trading prediction system using GMO FX API and LightGBM"
readme = "README.md"
authors = [
    { name = "Sawa-E", email = "sawasawasyuwasyuwa@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "lightgbm>=4.3",
    "optuna>=3.6",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "respx>=0.21",
    "mypy>=1.11",
    "ruff>=0.9",
    "pre-commit>=4.0",
    "pip-audit>=2.7",
    "pandas-stubs>=2.2",
]

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["lightgbm.*", "optuna.*", "sklearn.*", "httpx.*", "matplotlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
